# Ham-CW

./: COMPLETE_SUMMARY.txt  Cargo.toml  INSTALLATION_CHECKLIST.md  QUICK_REFERENCE_CARD.txt  README.md  SETUP_GUIDE.md  START_HERE.md  WIRING_REFERENCE.md  app.py  asoundrc  audio.py  audio_engine.py  config.py  gpio_detector.py  gpio_handler.py  gui.py  ham-cw.service  ham_cw.py  install.sh  keyer_engine.py  main.py  morse.py  requirements.txt  say_ip.py  settings.py  update.sh  web_server.py
rust/: Cargo.toml  build-pi.sh  ham-cw.service  install-rust.sh  install.sh  test-api.sh
rust/.cargo/: config.toml
rust/src/: audio.rs  gpio.rs  main.rs  morse.rs  settings.rs
rust/static/css/: style.css
rust/static_assets/: index.html
src/: index.html  main.rs
static/: index.html
static/css/: style.css
static/js/: main.js
templates/: index.html
