[package]
name    = "ham-cw"
version = "0.1.0"
edition = "2021"

# Two optional features so you can strip dependencies if needed:
#   sidetone  – ALSA audio feedback (default ON)
#   To build without sidetone: cargo build --release --no-default-features
[features]
default   = ["sidetone"]
sidetone  = ["dep:alsa"]

[dependencies]
rppal      = "0.18"
libc       = "0.2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
alsa       = { version = "0.9", optional = true }

# Release profile tuned for Pi Zero (small binary, low RAM)
[profile.release]
opt-level      = "z"   # optimise for size
lto            = true
codegen-units  = 1
strip          = true
panic          = "abort"
