[package]
name = "ham-cw"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.18", features = ["hal"] }
cpal = "0.15"
alsa = "0.9"
